--- a/package.json
+++ b/package.json
@@ -6,23 +6,14 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "format": "prettier --write \"**/*.{js,ts,tsx}\"",
-    "lint": "eslint . --ext ts --ext tsx --ext js",
-    "type-check": "tsc --pretty --noEmit",
-    "test": "jest",
-    "test-all": "yarn lint && yarn type-check && yarn test"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged",
-      "pre-push": "yarn run type-check"
-    }
-  },
-  "lint-staged": {
-    "*.@(ts|tsx)": [
-      "yarn lint",
-      "yarn format"
-    ]
+    "lint": "run-p -l -c --aggregate-output lint:*",
+    "lint:eslint": "eslint .",
+    "lint:prettier": "prettier --check .",
+    "fix": "run-s fix:prettier fix:eslint",
+    "fix:eslint": "npm run lint:eslint -- --fix",
+    "fix:prettier": "npm run lint:prettier -- --write",
+    "test": "run-p -l -c --aggregate-output lint:* unit",
+    "unit": "jest"
   },
   "babel": {
     "presets": [
@@ -38,7 +29,7 @@
     "next-themes": "0.0.10",
     "react": "17.0.1",
     "react-dom": "17.0.1",
-    "react-textarea-autosize": "^8.3.2"
+    "swr": "^0.5.2"
   },
   "devDependencies": {
     "@headlessui/react": "^0.3.1",
@@ -59,14 +50,18 @@
     "eslint-plugin-react-hooks": "4.2.0",
     "eslint-plugin-simple-import-sort": "7.0.0",
     "eslint-plugin-tailwind": "0.2.1",
-    "husky": "4.3.8",
     "identity-obj-proxy": "3.0.0",
     "jest": "26.6.3",
     "jest-watch-typeahead": "0.6.1",
-    "lint-staged": "10.5.3",
+    "msw": "^0.27.1",
+    "npm-run-all": "^4.1.5",
     "postcss": "8.2.8",
     "prettier": "2.2.1",
+    "react-textarea-autosize": "^8.3.2",
     "tailwindcss": "2.0.3",
     "typescript": "4.1.3"
+  },
+  "msw": {
+    "workerDirectory": "public"
   }
 }
